--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yelpcamp",
+  "name": "CommonBlog",
   "version": "1.0.0",
-  "description": "YelpCamp building",
+  "description": "CommonBlog building,",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
+    "jquery": "^3.2.1",
     "method-override": "^2.3.10",
     "mongoose": "^4.12.4",
     "passport": "^0.4.0",
